--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -8,32 +8,7 @@
 
 <div class="row exchanges-frame">
   <div *ngFor="let exchange of exchangeList" class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
-      <div class="exchange-link">
-          <div class="assetsDescription">
-              <div class="lastPrice">0.00</div>
-              <div class="baseAssetDesc">
-                  <span class="baseAssetCode">{{exchange.baseAsset.code}}</span><br/>
-                  <span class="baseAssetIssuer">{{exchange.baseAsset.issuer.domain}}</span>
-              </div>
-              <span class="slash">/</span>
-              <div class="counterAssetDesc">
-                  <span class="counterAssetCode">{{exchange.counterAsset.code}}</span><br/>
-                  <span class="counterAssetIssuer">{{exchange.counterAsset.issuer.domain}}</span>
-              </div>
-              <div class="dailyChangePercent green">+0.00%</div>
-          </div>
-          <div id="highestXlmVolumeChart1" class="exchange-link-chart">
-              <div class="chartWarning">Loading data...</div>
-          </div>
-          <script type="text/javascript">
-              //TODO: make a WS call to figure out what assets should be used
-              var highestXlmVolumeChart1Ui;
-              $(function() {
-                  highestXlmVolumeChart1Ui = new ExchangeThumbnail(KnownAssets.XLM, KnownAssets.MOBI);
-                  highestXlmVolumeChart1Ui.Initialize("highestXlmVolumeChart1");
-              });
-          </script>
-      </div>
+    <app-exchange-thumbnail [exchange]="exchange"></app-exchange-thumbnail>
   </div>
 
   <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" style="border: 1px solid green; color: red; font-weight: bold;">
