--- a/src/assets/styles/3rdParty/bootstrap.css
+++ b/src/assets/styles/3rdParty/bootstrap.css
@@ -269,11 +269,7 @@ html {
       border: 1px solid #ddd !important;
     }
   }
-  @font-face {
-    font-family: 'Glyphicons Halflings';
-    src: url('../fonts/glyphicons-halflings-regular.eot');
-    src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-  }
+
   .glyphicon {
     position: relative;
     top: 1px;
@@ -1092,8 +1088,8 @@ html {
     font-size: 14px;
     line-height: 1.42857143;
     color: #333333;
-    background-color: #ffffff; */
-  }
+    background-color: #ffffff;
+  }*/
   input,
   button,
   select,
