--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/styles/3rdParty/bootstrap.css";
+@import "./assets/styles/3rdParty/bootstrap-theme.css";
+
+
+html {
+    height: 100%;
+}
+
+body {
+    /* The only way to make the #footer work as expected */
+    min-height: 100%;
+    padding-bottom: 30px;
+}
+
+html, body {
+    position: relative;
+    background-color: rgb(246, 246, 246);
+    font-family: consolas,"Liberation Mono",courier,monospace;
+    font-size: .92rem;
+    color: #5B6A72;
+}
