--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
         </a>
     </div>
     <div class="col-lg-9 col-md-9 col-sm-9 col-12 headerLinks">
-        <a routerLink="/configuration" class="link" id="configurationLink" style="float: right; padding-left: 15px;">Configuration</a>
-        <a routerLink="/myExchanges" class="link" id="myExchangesLink" style="float: right;">My Exchanges</a>
+        <a routerLink="/configuration" class="link" id="configurationLink">Configuration</a>
+        <a routerLink="/myExchanges" class="link" id="myExchangesLink">My Exchanges</a>
     </div>
   </div>
 
