--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,18 @@ html, body {
     font-size: .92rem;
     color: #5B6A72;
 }
+
+/* For pages Overview and My Exchanges */
+div.exchanges-frame {
+    padding-left:40px;
+    padding-right:40px;
+}
+
+div.chartWarning {
+    height: 300px;
+    line-height: 300px;
+    background-color: white;
+    text-align: center;
+    font-size: 25px;
+}
+/**************************************/
