Removed most of the jQuery code to render data values in the ExhangeThumbnail

--- a/src/app/exchange-thumbnail/exchange-thumbnail.component.html
+++ b/src/app/exchange-thumbnail/exchange-thumbnail.component.html
@@ -1,6 +1,6 @@
 <div class="exchange-link" (click)="onClick();">
   <div class="assetsDescription">
-      <div class="lastPrice">0.00</div>
+      <div class="lastPrice">{{lastPrice}}</div>
       <div class="baseAssetDesc">
           <span class="baseAssetCode">{{exchange.baseAsset.code}}</span><br/>
           <span class="baseAssetIssuer">{{exchange.baseAsset.issuer.domain}}</span>
@@ -10,9 +10,9 @@
           <span class="counterAssetCode">{{exchange.counterAsset.code}}</span><br/>
           <span class="counterAssetIssuer">{{exchange.counterAsset.issuer.domain}}</span>
       </div>
-      <div class="dailyChangePercent green">+0.00%</div>
+      <div [className]="dailyChangeDesc.startsWith('-') ? 'dailyChangePercent red' : 'dailyChangePercent green'">{{dailyChangeDesc}}</div>
   </div>
-  <div id="{{placeHolderId}}" class="exchange-link-chart">
+  <div id="{{chartPlaceholderId}}" class="exchange-link-chart">
       <div [ngClass]="{
           'chartWarning': dataStatus === DataStatus.NoData,
           'error': dataStatus === DataStatus.Error
