--- a/src/app/exchange/exchange.component.html
+++ b/src/app/exchange/exchange.component.html
@@ -1,3 +1,76 @@
-<p>
-  exchange works!
-</p>
+<div class="row">
+  <div class="col-lg-2 col-md-12 col-sm-12">
+      <!--TODO: maybe some content here? -->
+  </div>
+  <div class="col-lg-10 col-md-12 col-sm-12">
+      <div style="width:450px; float: left;">
+          <div id="baseAssetCodeDropDown">Asset code drop-down here</div>
+          <div id="baseAssetAnchorDropDown">Anchor drop-down here</div>
+          <div class="chartButton swapButton">
+              <a id="swapAssetsLink" (click)="swapAssets()" title="Switch assets">&hArr;</a>
+          </div>
+      </div>
+
+      <div style="width: 425px; float: left;">
+          <div id="counterAssetCodeDropDown">Asset code drop-down here</div>
+          <div id="counterAssetAnchorDropDown">Anchor drop-down here</div>
+      </div>
+      <div class="chartButton intervalButtons">
+          <!-- TODO: rework these to standard GET links if possible. JS should not be necessary. -->
+          <a id="interval900000" class="link" href="#" onclick="exchangeUi.SetChartInterval('15min'); return false;">15min</a>
+          <a id="interval3600000" class="link" href="#" onclick="exchangeUi.SetChartInterval('1hour'); return false;">hour</a>
+          <a id="interval86400000" class="link" href="#" onclick="exchangeUi.SetChartInterval('1day'); return false;">day</a>
+          <a id="interval604800000" class="link" href="#" onclick="exchangeUi.SetChartInterval('1week'); return false;">week</a>
+      </div>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-lg-2 col-md-12 col-sm-12">
+      <br/><br/>
+      <table>
+          <thead>
+              <th>Price</th>
+              <th>Amount <span class="baseAssetCode"></span></th>
+          </thead>
+          <tbody id="orderBookAsks">
+              <tr></tr>
+              <tr><td>Loading data...</td></tr>
+          </tbody>
+      </table>
+      <div id="currentPrice">
+          <span>0.0</span>
+      </div>
+      <table>
+          <tbody id="orderBookBids">
+              <tr></tr>
+              <tr><td>Loading data...</td></tr>
+          </tbody>
+      </table>
+  </div>
+  <div class="col-lg-7 col-md-8 col-sm-8" id="candleChartPanel" style="height: 800px;">
+      <div id="marketChart" style="min-height: 500px; height: 100%;">
+          <br/><br/>Loading chart...
+      </div>
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-4">
+      <br/>
+      <table id="tradeHistoryTable">
+          <thead>
+          <tr>
+              <th>Time</th>
+              <th>Price</th>
+              <th>Amount (<span class="baseAssetCode"></span>)</th>
+          </tr>
+          </thead>
+          <tbody id="tradeHistoryData">
+          <tr></tr>
+          <tr>
+              <td>&nbsp;</td>
+              <td colspan="2">Loading data...</td>
+          </tr>
+          </tbody>
+      </table>
+  </div>
+</div>
