New component for trades history

--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -8,6 +8,10 @@
     margin-left:4px;
 }
 
+#swapAssetsLink {
+    cursor: pointer;
+}
+
 div.chartButton {
     float: left;
     font-size: 2em;
@@ -31,26 +35,15 @@ div.intervalButtons {
     padding-left: 8px;
 }
 
+div.chartWarning {
+    height: 300px;
+    line-height: 70px;
+    text-align: center;
+    font-size: 25px;
+}
+
 thead> tr {
     border-bottom: 1px solid #5B6A72;
-}
-
-#tradeHistoryTable {
-    border-right: 1px solid #5B6A72;
-    border-left: 1px solid #5B6A72;
-    border-spacing: 0px;
-}
-
-#tradeHistoryData td.buy {
-    color: #46B446;
-}
-#tradeHistoryData td.sell {
-    color: #ED8117;
-}
-#tradeHistoryData td {
-    border-bottom: 1px solid #5B6A72;
-    padding-left: 5px;
-    padding-right: 15px;
 }
 
 #orderBookBids td, #orderBookAsks td {
