--- a/src/app/exchange-thumbnail/exchange-thumbnail.component.css
+++ b/src/app/exchange-thumbnail/exchange-thumbnail.component.css
@@ -51,3 +51,10 @@ div.exchange-link-chart {
     height: 100%;
 }
 
+div.chartWarning {
+    height: 300px;
+    line-height: 300px;
+    background-color: white;
+    text-align: center;
+    font-size: 25px;
+}
