--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -8,6 +8,10 @@
     margin-left:4px;
 }
 
+:host ::ng-deep th {
+    padding-left: 4px;
+}
+
 :host ::ng-deep thead> tr {
     border-bottom: 1px solid #5B6A72;
 }
@@ -44,25 +48,4 @@ div.chartWarning {
     line-height: 70px;
     text-align: center;
     font-size: 25px;
-}
-
-#orderBookBids td, #orderBookAsks td {
-    padding-left: 5px;
-    padding-right: 15px;
-}
-#orderBookBids tr.linked, #orderBookAsks tr.linked {
-    font-style: italic;
-    color: #8396a0;
-}
-
-div#currentPrice {
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 14px;
-}
-div#currentPrice > span.buy {
-    color: #46b446; /*#3aba3a; rgb(184, 233, 134); */
-}
-div#currentPrice > span.sell {
-    color: #ED8117;
 }
