--- a/src/app/my-exchanges/my-exchanges.component.html
+++ b/src/app/my-exchanges/my-exchanges.component.html
@@ -1,2 +1,8 @@
-<h2>TODO</h2>
-
+<div class="row exchanges-frame">
+    <!-- User's custom markets added here dynamicaly -->
+    <div id="addCustomExchange" class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <div id="addExchangeButton" class="exchange-link" (click)="addCustomExchange();">
+            (add)
+        </div>
+    </div>
+</div>
