--- a/src/app/my-exchanges/my-exchanges.component.css
+++ b/src/app/my-exchanges/my-exchanges.component.css
@@ -1,3 +1,6 @@
+#addCustomExchange {
+    margin-top: 24px;
+}
 #addExchangeButton {
     height: 372px;
     line-height: 372px;
@@ -7,10 +10,4 @@
 #addExchangeButton:hover {
     font-size: 26px;
     font-weight: bold;
-}
-
-div.exchange-link {
-    cursor: pointer;
-    border: 2px solid #8396a0;
-    margin-top: 24px;
 }
