--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -1,22 +1,16 @@
-<div id="customExchange{exchange.id}" class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
-    <div class="exchange-link">
-        <div class="assetsSelection">
-            <div class="removeExchButton">X</div>
+<div id="customExchange{{exchange.id}}" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 customExchange">
+    <div onmouseover="$(this).find('div.removeExchButton').show();" onmouseout="$(this).find('div.removeExchButton').hide();">
+        <div class="assetsSelection" onclick="return false;">
+            <div class="removeExchButton" (click)="removeExchange()">X</div>
             <div class="assetDropDowns">
-                <div id="baseAssetCodeDropDown{exchange.id}" style="width: 100px;">Asset code drop-down here</div>
-                <div id="baseAssetAnchorDropDown{exchange.id}">Anchor drop-down here</div>
-                <div id="counterAssetCodeDropDown{exchange.id}" style="width: 100px;">Asset code drop-down here</div>
-                <div id="counterAssetAnchorDropDown{exchange.id}">Anchor drop-down here</div>
+                <div id="baseAssetCodeDropDown{{exchange.id}}" style="width: 100px;">Asset code drop-down here</div>
+                <div id="baseAssetAnchorDropDown{{exchange.id}}">Anchor drop-down here</div>
+                <div id="counterAssetCodeDropDown{{exchange.id}}" style="width: 100px;">Asset code drop-down here</div>
+                <div id="counterAssetAnchorDropDown{{exchange.id}}">Anchor drop-down here</div>
             </div>
         </div>
-        <div class="assetsDescription">
-            <div class="lastPrice">0.00</div>
-            <div class="baseAssetDesc"> </div>
-            <div class="counterAssetDesc"> </div>
-            <div class="dailyChangePercent green">+0.00%</div>
-        </div>
-        <div id="customExchangeChart{exchange.id}" class="exchange-link-chart">
-            <div class="chartWarning">Loading data...</div>
+        <div id="customExchangeChart{{exchange.id}}" class="exchange-link-chart">
+            <app-exchange-thumbnail [exchange]="exchange" [showAssetNames]="false"></app-exchange-thumbnail>
         </div>
     </div>
 </div>
