--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -1,3 +1,25 @@
-<p>
-  configuration works!
-</p>
+<button onclick="dumpCookie();">Show cookies</button>
+<button onclick="eraseCookies();">Clear cookies</button>
+<br/>
+<div id="debug" style="width: 800px; height: 200px; border: 1px solid green;">Hello World</div>
+<h5>Manage custom assets to be used on the Exchanges.</h5>
+<div class="row paddedRow">
+    <div class="col-lg-4 col-md-4 col-sm-12">
+        <app-custom-asset-codes></app-custom-asset-codes>
+    </div>
+    <div class="col-lg-8 col-md-8 col-sm-12">
+        <h3>Custom issuers (anchors)</h3>
+        <hr/>
+        <div id="customAnchorsList" class="valueList"> </div>
+
+        <label for="newAnchorAddress">Issuer address:</label>
+        <input type="text" id="newAnchorAddress" placeholder="GASJBQBTC4C5J7X..." maxlength="56" data-validation-regex="^G[a-zA-Z0-9]{55}$"/>
+        <br/>
+        <div data-hint-for="newAnchorAddress">56 characters starting with G. Only letters and digits.</div>
+        <label for="newAnchorName">Issuer domain:</label>
+        <input type="text" id="newAnchorName" placeholder="example.com"/>
+        <button id="addAnchorBtn" >Add</button>
+
+    </div>
+</div>
+
