New component for custom assets on the Configuration page

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -11,4 +11,8 @@
         <app-custom-issuers></app-custom-issuers>
     </div>
 </div>
-
+<div class="row paddedRow" style="margin-bottom: 60px;">
+    <div class="col-lg-9 col-md-10 col-sm-12">
+        <app-custom-assets></app-custom-assets>
+    </div>
+</div>
