Playing with more angulary ddSlick alternatives, nothing nice so far

--- a/src/app/configuration/configuration.component.css
+++ b/src/app/configuration/configuration.component.css
@@ -15,7 +15,7 @@
     color: black;
 }
 
-:host ::ng-deep input.invalid {     /*TODO: ng-invalid? */
+:host ::ng-deep input.ng-invalid {
     border-color: #ED8117;
     background-color: #FAD9B9;
 }
