Finished the 2 dropdowns on custom assets section of Configuration. Attempt to do something about the missing custom asset code images.

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -5,14 +5,14 @@
 <h5>Manage custom assets to be used on the Exchanges.</h5>
 <div class="row paddedRow">
     <div class="col-lg-4 col-md-4 col-sm-12">
-        <app-custom-asset-codes></app-custom-asset-codes>
+        <app-custom-asset-codes (assetCodesChanged)="customAssets.updateAssetCodes()"></app-custom-asset-codes>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12">
-        <app-custom-issuers></app-custom-issuers>
+        <app-custom-issuers (issuersChanged)="customAssets.updateIssuers()"></app-custom-issuers>
     </div>
 </div>
 <div class="row paddedRow" style="margin-bottom: 60px;">
     <div class="col-lg-9 col-md-10 col-sm-12">
-        <app-custom-assets></app-custom-assets>
+        <app-custom-assets #customAssets></app-custom-assets>
     </div>
 </div>
