Setup of orderbook and chart stream to update them periodically (fixes #1)

--- a/src/app/trade-history/trade-history.component.html
+++ b/src/app/trade-history/trade-history.component.html
@@ -20,7 +20,7 @@
   <ng-template #tradeItems>
     <tr *ngFor="let trade of recentTrades"
         title="seller: {{trade.sellingAccount.substring(0, 8)}}...{{trade.sellingAccount.substring(48)}}
-buyer: {{trade.buyingAccount.substring(0, 8)}}...{{trade.sellingAccount.substring(48)}}">
+buyer: {{trade.buyingAccount.substring(0, 8)}}...{{trade.buyingAccount.substring(48)}}">
       <td>{{trade.time | date:'HH:mm:ss'}}</td> 
       <td class="{{trade.tradeType}}">{{Utils.formatPrice(trade.price)}}</td>         
       <td>{{Utils.formatAmount(trade.amount)}}</td>
