--- a/src/app/exchange/exchange.component.html
+++ b/src/app/exchange/exchange.component.html
@@ -3,7 +3,7 @@
       <!--TODO: maybe some content here? -->
   </div>
   <div class="col-lg-10 col-md-12 col-sm-12">
-      <div style="width:450px; float: left;">
+      <div class="dropdownsWrapper">
           <div id="baseAssetCodeDd">Asset code drop-down here</div>
           <div id="baseIssuerDd">Anchor drop-down here</div>
           <div class="chartButton swapButton">
@@ -11,7 +11,7 @@
           </div>
       </div>
 
-      <div style="width: 425px; float: left;">
+      <div class="dropdownsWrapper">
           <div id="counterAssetCodeDd">Asset code drop-down here</div>
           <div id="counterIssuerDd">Anchor drop-down here</div>
       </div>
