Removed the random shadow on exchange thumbnails. Chart warning message styling.

--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -50,8 +50,10 @@ div.intervalButtons {
 }
 
 div.chartWarning {
-    height: 300px;
+    position: absolute;
+    top: 300px;
+    width: 100%;
     line-height: 70px;
-    text-align: center;
     font-size: 25px;
+    text-align: center;
 }
