Few minor tweaks; tooltip formatting, new asset icons, updated markets on the Overview page.

--- a/src/app/trade-history/trade-history.component.html
+++ b/src/app/trade-history/trade-history.component.html
@@ -19,7 +19,8 @@
 
   <ng-template #tradeItems>
     <tr *ngFor="let trade of recentTrades"
-        title="seller: {{trade.sellingAccount.substring(0, 8)}}...{{trade.sellingAccount.substring(48)}}
+        title="date: {{trade.time | date:'d MMM'}}
+seller: {{trade.sellingAccount.substring(0, 8)}}...{{trade.sellingAccount.substring(48)}}
 buyer: {{trade.buyingAccount.substring(0, 8)}}...{{trade.buyingAccount.substring(48)}}">
       <td>{{trade.time | date:'HH:mm:ss'}}</td> 
       <td class="{{trade.tradeType}}">{{Utils.formatPrice(trade.price)}}</td>         
