--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,25 @@
 <div class="container-fluid">
-  <div class="row" style="margin: 5px;">
-    <div class="col-lg-3 col-md-3 col-sm-3 col-12">
-        <a routerLink="/overview" id="logo" class="link" title="Nebular">
-            <div class="homeLink">Nebular</div>
-            <span id="logoSubtitle" style="font-size: .8em">Stellar charts</span>
-        </a>
+    <div class="row" style="margin: 5px;">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-12">
+            <a routerLink="/overview" id="logo" class="link" title="Nebular">
+                <div class="homeLink">Nebular</div>
+                <span id="logoSubtitle" style="font-size: .8em">Stellar charts</span>
+            </a>
+        </div>
+        <div class="col-lg-9 col-md-9 col-sm-9 col-12 headerLinks">
+            <a routerLink="/configuration" class="link" id="configurationLink">Configuration</a>
+            <a routerLink="/myExchanges" class="link" id="myExchangesLink">My Exchanges</a>
+        </div>
     </div>
-    <div class="col-lg-9 col-md-9 col-sm-9 col-12 headerLinks">
-        <a routerLink="/configuration" class="link" id="configurationLink">Configuration</a>
-        <a routerLink="/myExchanges" class="link" id="myExchangesLink">My Exchanges</a>
-    </div>
-  </div>
 
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
 </div>
 
 <br/><br/>
 <footer id="footer">
-  <div class="container">
-      <span>Only for information. Accuracy of data is not guaranteed. No investment or trading decision should be made based on this page.<br/>
-            Got something to say? Send me a MEMO to GASJBQBTC4C5J7X24C4Q7S6IKMMK3HKWBX4WMJYEQUW7OKMKNNDRK3J7</span>
-  </div>
+    <div class="container">
+        <span>Only for information. Accuracy of data is not guaranteed. No investment or trading decision should be made based on this page.<br/>
+                Got something to say? Send me a MEMO to GASJBQBTC4C5J7X24C4Q7S6IKMMK3HKWBX4WMJYEQUW7OKMKNNDRK3J7. v18.11.10</span>
+    </div>
 </footer>
