--- a/src/app/configuration/custom-assets/custom-assets.component.html
+++ b/src/app/configuration/custom-assets/custom-assets.component.html
@@ -7,8 +7,27 @@
     </div>
 </div>
 <br/>
-<div style="width:600px; float: left;">
-    <div id="assetTypesDropDown">assetTypesDropDown</div>
-    <div id="anchorsDropDown">anchorsDropDown</div>
-</div>
+
+<mat-form-field style="width: 150px;">
+    <mat-select [(value)]="selectedAssetCode" class="selectedAssetCode" placeholder="asset type..."
+                [ngStyle]="{
+                    'background-image':'url(./assets/images/asset_icons/' + this.selectedAssetCode + '.png',
+                    'padding-left': this.selectedAssetCode ? '40px' : '5px',
+                    'font-style': this.selectedAssetCode ? 'normal' : 'italic'
+                }">
+        <mat-option class="ddOption" *ngFor="let assetCode of assetCodes" value="{{assetCode.value}}" title="{{assetCode.tooltip}}">
+            <img src="https://nebular.app/assets/images/asset_icons/{{assetCode.value}}.png" style="width: 32px; height: 32px;"/>
+            {{assetCode.text}}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
+
+<mat-form-field style="width: 420px; margin-right: 15px;">
+    <mat-select [(value)]="selectedIssuerAddress" class="selectedIssuerOption" placeholder="asset issuer..."
+                [ngStyle]="{ 'font-style': this.selectedIssuerAddress ? 'normal' : 'italic' }">
+        <mat-option class="ddOption" *ngFor="let anchor of assetIssuers" value="{{anchor.value}}" title="{{anchor.tooltip}}">
+            {{anchor.text}}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
 <button type="button" id="addAssetBtn" class="big-button" (click)="addAsset()">Add</button>
